# juno-server

./: .env  Cargo.toml
migrations/2018-10-19-174314_create_agents/: up.sql
migrations/2019-01-27-160122_create_users/: up.sql
src/: agent_routes.rs  agent_server.rs  app.rs  db.rs  main.rs  models.rs  schema.rs
static/: app.css  app.js
templates/: index.html  layout.html  not_found.html
