[package]
name = "juno-server"
version = "0.1.0"
authors = ["Jon Grimes <jong@spiceworks.com>"]

[dependencies]
env_logger = "0.5"
tera = "*"
actix = "0.7.0"
actix-web = "0.7.3"
bytes = "0.4"
futures = "0.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }

diesel = { version = "1.3", features = ["postgres", "r2d2", "uuid", "network-address"] }
r2d2 = "0.8"
dotenv = "0.9.0"